--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,11 +40,7 @@ android {
     }
 }
 
-// STABLE dependency versions
-// STABLE dependency versions
 dependencies {
-    // Note: No explicit kotlin-stdlib line needed, the plugin handles it.
-
     implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -64,23 +60,20 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'com.squareup.moshi:moshi-kotlin:1.15.1'
-
     def coroutines_version = "1.8.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     kapt "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     kapt 'com.github.bumptech.glide:compiler:4.16.0'
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.15.1'
-
     implementation 'com.squareup.moshi:moshi:1.15.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.15.1'
 }
 kapt {
     correctErrorTypes true
