Update visual assets

--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
-// Top-level build file
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = '1.9.22'
+
     repositories {
         google()
         mavenCentral()
     }
+
     dependencies {
-        // Use latest stable AGP
-        classpath 'com.android.tools.build:gradle:8.4.1'
-        // Use latest stable Kotlin
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.24"
+        classpath 'com.android.tools.build:gradle:8.2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
