--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.StremioMPVPlayer.Modern"
+        android:theme="@style/Theme.StremioMPVPlayer"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
